Fix horizontal scroll

--- a/resources/css/components/_player-messages.components.scss
+++ b/resources/css/components/_player-messages.components.scss
@@ -2,7 +2,8 @@
 .player-messages {
   width: 280px; 
   height: 100px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   list-style: none;
   @media #{$desktop} {
     height: 270px;
